# langrise-gtk

./: .clang-format  .gitignore  README.md  meson.build
data/: gresource.xml  license.txt  lr-dictionary.ui  lr-goldendict-provider.ui  lr-language-editor-dialog.ui  lr-language-manager-dialog.ui  lr-language-manager-row.ui  lr-lemma-suggestion.ui  lr-main-window.ui  lr-reader.ui  lr-text-dialog.ui  lr-text-selector-row.ui  lr-text-selector.ui  lr-vocabulary-view.ui  schema.sql  style.css
src/: common.h  export-text.c  export-text.h  language_presets.h  list-row-creators.c  list-row-creators.h  lr-database.c  lr-database.h  lr-db-lemmatizer.c  lr-db-lemmatizer.h  lr-dictionary-provider.c  lr-dictionary-provider.h  lr-dictionary.c  lr-dictionary.h  lr-goldendict-provider.c  lr-goldendict-provider.h  lr-language-editor-dialog.c  lr-language-editor-dialog.h  lr-language-manager-dialog.c  lr-language-manager-dialog.h  lr-language-switcher.c  lr-language-switcher.h  lr-language.c  lr-language.h  lr-lemma-instance.c  lr-lemma-instance.h  lr-lemma-suggestion.c  lr-lemma-suggestion.h  lr-lemma.c  lr-lemma.h  lr-lemmatizer.c  lr-lemmatizer.h  lr-main-window.c  lr-main-window.h  lr-reader.c  lr-reader.h  lr-splitter.c  lr-splitter.h  lr-text-dialog.c  lr-text-dialog.h  (+7 more)
